--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 <h3>Menu</h3>
 <ul class="nav">
   <li><a href="http://ineto.org" target="_blank">Home</a></li>
-  <li><a href="https://github.com/theineto" target="_blank">GitHub Org</a></li>
-  <li><a href="https://github.com/theineto/whitepaper" target="_blank">White Paper</a></li>
-  <li><a href="https://github.com/theineto/inetod" target="_blank">Ineto Daemon</a></li>
+  <li><a href="https://github.com/inetoplatform" target="_blank">GitHub</a></li>
+  <li><a href="https://github.com/inetoplatform/whitepaper" target="_blank">White Paper</a></li>
+  <li><a href="https://github.com/inetoplatform/protocol" target="_blank">Protocol</a></li>
+  <li><a href="https://github.com/inetoplatform/inetod" target="_blank">Open Source</a></li>
   <li><a data-scroll href="#contact">Contact</a></li>
   <br>
   <img src="img/logo.png">
@@ -71,7 +72,7 @@
 <div class="col-md-3 col-md-offset-1">
 <address>
   <span>About</span>
-  <p><a href="https://github.com/theineto/whitepaper">White Paper</a></p>
+  <p><a href="https://github.com/inetoplatform/whitepaper">White Paper</a></p>
   <span>Email</span>
   <p><a href=mailto:admin@ineto.org>admin@ineto.org</a></p>
 </address>
