--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 <h3>Menu</h3>
 <ul class="nav">
   <li><a href="http://ineto.org" target="_blank">Home</a></li>
-  <li><a href="https://github.com/inetoprotocol/airdrop" target="_blank">Air Drop</a></li>
-  <li><a href="https://github.com/inetoprotocol/whitepaper" target="_blank">White Paper</a></li>
-  <li><a href="https://github.com/inetoprotocol/protocol" target="_blank">Protocol</a></li>
-  <li><a href="https://github.com/inetoprotocol/inetod" target="_blank">Open Source</a></li>
+  <li><a href="https://github.com/inetocoin/airdrop" target="_blank">Air Drop</a></li>
+  <li><a href="https://github.com/inetocoin/whitepaper" target="_blank">White Paper</a></li>
+  <li><a href="https://github.com/inetocoin/protocol" target="_blank">Protocol</a></li>
+  <li><a href="https://github.com/inetocoin/inetod" target="_blank">Open Source</a></li>
   <li><a data-scroll href="#contact">Contact</a></li>
   <br>
   <img src="img/logo.png">
@@ -72,7 +72,7 @@
 <div class="col-md-3 col-md-offset-1">
 <address>
   <span>About</span>
-  <p><a href="https://github.com/inetoprotocol/whitepaper">White Paper</a></p>
+  <p><a href="https://github.com/inetocoin/whitepaper">White Paper</a></p>
   <span>Email</span>
   <p><a href=mailto:admin@ineto.org>admin@ineto.org</a></p>
 </address>
